# neuralbridge

./: .gitignore  README.md  environment.yaml  pyproject.toml  setup.py
assets/: cell_normal_brutal_force.npy
configs/: brownian.yaml  cell_mm.yaml  cell_mm_adjoint.yaml  cell_mm_score.yaml  cell_normal.yaml  cell_normal_adjoint.yaml  cell_normal_score.yaml  cell_rare.yaml  cell_rare_adjoint.yaml  cell_rare_score.yaml  fhn_extreme.yaml  fhn_normal.yaml  landmark_ellipse.yaml  ou.yaml
examples/: FHN_model.ipynb  benchmarks.ipynb  brownian.ipynb  brownian_demo.ipynb  cell.ipynb  cell_to_distributions.ipynb  fhn.ipynb  guided_cell_model.ipynb  kld_PdiamPstar.ipynb  kld_loss.ipynb  landmark_model.ipynb  landmarks.ipynb  linear_models.ipynb  ou.ipynb  sin_bridge.ipynb  train_brownian.py  train_cell.py  train_fhn.py  train_landmark.py  train_ou.py
examples/cell_model_runs/: info.txt
julia_legecy/: partialbridge_cellmodel.jl
neuralbridge/: setups.py
neuralbridge/configs/: adjoint_bridge_config.py  brownian.yaml  cell_mm.yaml  cell_rare_score.yaml  fhn_normal.yaml  landmark_ellipse.yaml  neural_bridge_config.py  score_bridge_config.py
neuralbridge/models/: neurb.py  pCN.py  score.py  scorematching.py
neuralbridge/networks/: mlps.py  score_net.py  time_embedding.py  time_mlp.py
neuralbridge/run_scripts/: read_config.py  run_cell_model.py  train.py  train_adjoint.py  train_score.py
neuralbridge/solvers/: ode.py  sde.py
neuralbridge/stochastic_processes/: bases.py  conds.py  examples.py  gbp.py  unconds.py
neuralbridge/utils/: ll_eval.py  model.py  plotting.py  sample_path.py  t_grid.py
notebooks/: FHN_model.ipynb  FN_model.ipynb  benchmarks.ipynb  brownian_bridge_gd.ipynb  brownian_bridges.ipynb  brownian_kld_loss.ipynb  cell_kld_loss.ipynb  cell_model.ipynb  cell_model_baselines.ipynb  cell_model_differentiable.ipynb  differentiable_solver.ipynb  double_well_model.ipynb  guided_cell_model.ipynb  kld_loss.ipynb  kld_loss2.ipynb  landmark_model.ipynb  landmarks.ipynb  linear_model.ipynb  linear_model_differentiable.ipynb  linear_models.ipynb  ou_bridge.ipynb  ou_bridge_kld_loss.ipynb  ou_kld_loss.ipynb
notebooks/cell_model_runs/: info.txt
run_scripts/: run_cell_model.py  run_ou.py
src/: __init__.py  base.py  bif.py  nn.py  partialbridge_cellmodel.py  pcn.py  sde_examples.py  sde_solver.py  trainer.py
src/backward_filtering/: backward_ode.py
src/julia_legecy/: ou_bridge_tutorial.jl  partialbridge_cellmodel.jl
src/mcmc/: pcn.py
src/networks/: mlps.py  spectral_norm.py  time_embeddings.py
src/sdes/: base.py  bif.py  examples.py  neural_bridge.py  solver.py
src/solvers/: euler.py  sample_path.py  solver.py  wiener_process.py
tests/: test_backward_ode.py
(+40 files in other folders)
