[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralbridge"
version = "0.2.0"
description = "The package for paper: Neural Guided Diffusion Bridge."
authors = [{name = "Gefan Yang", email = "gy@di.ku.dk"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax=0.10.4",
    "diffrax",
    "optax",
    "matplotlib",
    "ipykernel",
    "ml_collections",
    "pytest",
    "jax[cpu]",
]

[project.optional-dependencies]
cpu = []
gpu = ["jax[cuda12]"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst"]