[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralbridge"
version = "0.2.0"
description = "The package for paper: Neural Guided Diffusion Bridge."
authors = [{name = "Gefan Yang", email = "gy@di.ku.dk"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax==0.10.4",
    "diffrax",
    "optax",
    "matplotlib",
    "ipykernel",
    "ml_collections",
    "pytest",
    "jax[cpu]",
]

[project.optional-dependencies]
cpu = []
gpu = ["jax[cuda12]"]

[tool.setuptools]
packages = ["neuralbridge"]
package-dir = {"neuralbridge" = "src"}

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "S", "T20", "Q"]
ignore = ["E501", "S101"]  # Line too long, assert detected

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true